<?xml version="1.0" encoding="utf-8"?><!-- TODO: fix inconsistency with danish/english text -->
<resources>
    <string name="app_name">C5 P-Kontrol</string>
    <string name="round_corner">Round Corner</string>


    <string name="title_activity__map_view">Activity_MapView</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Menu -->
    <!-- Menu Texts -->
    <string name="menu_txt_profile">Profile</string>
    <string name="menu_txt_freePark">Free Park</string>
    <string name="menu_txt_createTip">Create Tip</string>
    <string name="menu_txt_feedback">Feedback</string>
    <string name="menu_txt_parkAlarm">Park Here</string>
    <string name="menu_txt_pVagt">P-Vagt</string>

    <!-- Profile -->
    <!-- Profile Texts -->
    <string name="profile_template_name">[name here]</string>
    <string name="profile_template_numTips">number of tips </string>
    <string name="profile_template_numLikes">number of likes </string>
    <string name="profile_tip_changeProfileImage">change profile image</string>

    <!-- Profile Rating Texts -->
    <string name="profile_Rating_0"> Not yet participated </string>
    <string name="profile_Rating_1"> Getting started! </string>
    <string name="profile_Rating_2"> Getting into it! </string>
    <string name="profile_Rating_3"> Cool! </string>
    <string name="profile_Rating_4"> On fire! </string>
    <string name="profile_Rating_5"> Master rated! </string>
    <string name="deleteBtn"> Delete all data! </string>
    <string name="logOutBtn"> Log out </string>

    <!-- profile Rating Table  -->
    <string name="profile_template_tableColumn_1">Participation</string>
    <string name="profile_template_tableColumn_2">Numbers</string>
    <string name="profile_template_tableColumn_3">Result</string>

    <!-- Fragment Write a Tip  -->
    <!-- Write Tip Headers -->
    <string name="writeTip_title_step1">Choose location of your tip</string>
    <string name="writeTip_title_step2">Tell us about the area</string>
    <string name="WriteTip_TextInput">Write here..</string>
    <string name="writeTip_title_step3">Take Picture</string>
    <string name="writeTip_title_step4">Thank you for your contribution</string>
    <string name="writeTip_type_contribution">Choose tip type</string>
    <string name="writeTip_submit_contribution">Submit Contribution</string>
    <string name="writeTip_submit">submit</string>

    <!-- Write Tip Internal View Hints  -->
    <string name="writeTip_View_ChooseCategory">Choose Category </string>
    <string name="writeTip_View_writeComment">Leave Comment</string>
    <string name="writeTip_View_optional">(Optional)</string>
    <string name="writeTip_ThanksForContribution">Thanks for the Contribution!</string>

    <!-- Categories for Tips Creation -->
    <string-array name="WriteTip_View_ChooseCategories_categoriesArr">
        <item>category 1 </item>
        <item>category 2 </item>
        <item>category 3 </item>
    </string-array>

    <!-- Write Tip Navigation texts -->
    <string name="writeTip_BtmNavigation_continue">Swipe to continue</string>
    <string name="writeTip_Navigation_finish">Tap to finish</string>


    <string name="tip1">earlier versions of Access, we used the Memo data type to store large amounts of text, and the Text data type to store shorter strings (up to 255 characters). In Access 2013 and Access 2016, these two data types have been renamed “Long Text” and “Short Text” respectively, and they have different properties and size limits depending on whether you’re using a desktop database or an Access web app. Here are the details:</string>
    <string name="tip2">pas på</string>
    <string name="title_activity_maps">Map</string>


    <!-- test if we need both -->
    <string name="facebook_application_id" translatable="false">1045192295818256</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1045192295818256</string>


    <!-- close fragment strings -->
    <string name="close_frag_confirm">Yes</string>
    <string name="close_frag_deny">No</string>
    <string name="close_frag_title0">Close the app?</string>
    <string name="close_frag_title1">Delete all your personal data, it can\'t be restored?</string>
    <string name="close_frag_title2">Go to our facebook group and give os feedback!</string>

    <string name="feedback_choose_category">Choose Category</string>
    <string name="feedback_title">Please provide us with feedback!</string>
    <string name="feedback_category_text">Category</string>
    <string name="feedback_message_text">Feedback message</string>
    <string name="feedback_hint_text">Please write your feedback here</string>
    <string name="feedback_send_text">Send feedback</string>
    <string name="feedback_fb_title">Please leave some feedback and feel free to discuss our app in this facebook group!</string>
    <string name="feedback_fb_link_btn">Our Facebook Group</string>

    <string name="profile_forgot_password">Forgot password?</string>
    <string name="common_signin_button_text">Log ind</string>
    <string name="profile_create_account">Don\'t have an account? Sign up</string>
    <string name="profile_facebook">Continue with Facebook</string>
    <string name="profile_google">Login with Google</string>
    <string name="profile_login">Login</string>
    <string name="profile_sign_up">Sign up</string>

    <string name="topbar_pTip_header">P-Tip</string>
    <string name="topbar_pTip_subTitle">read or create a tip?</string>
    <string name="topbar_createTip_header">Creating a Tip</string>
    <string name="topbar_createTip_subTitle">Select a Location to Place tip</string>
    <string name="topbar_writeTip_heaeder">Creating a Tip</string>
    <string name="topbar_writeTip_subTitle">Write the actual Tip</string>
    <string name="topbar_contributedMessage_header">Thanks!</string>
    <string name="topbar_contributedMessage_subTitle">Your Tip has been created</string>
    <string name="topbar_alertedPVagt_header">P-Alert!</string>
    <string name="topbar_alertedPVagt_subTitle">Thank You</string>

    <string name="writeTip_type_freeParking">Free Parking Tip</string>
    <string name="writeTip_type_paidParking">Paid Parking Tip</string>
    <string name="writeTip_type_warningParking">Warning Tip</string>
    <string name="login_slogan">Stress-free parking Together</string>


    <string-array name="feedback_categories_array">
        <item>@string/feedback_choose_category</item>
        <item>Map</item>
        <item>Profile</item>
        <item>Login</item>
        <item>Other</item>
    </string-array>


</resources>
