<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00923B3B"
    android:animateLayoutChanges="true"
    android:id="@+id/menuBtn_menu"
    >

    <!-- Dragging Handle -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/menuBtn_draggingHandle">

        <FrameLayout
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_squarerounded_top"
            android:padding="5dp"
            >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:paddingTop="3dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/hello_blank_fragment"
                    android:background="@drawable/ic_dragginghandle"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"

                    />
            </FrameLayout>
        </FrameLayout>
    </RelativeLayout>

    <!-- Container of All Menu Buttons -->
    <TableLayout
        android:id="@+id/menu_btnContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_squarerounded_full"
        android:paddingTop="5dp"
        android:showDividers="middle"
        android:stretchColumns="*"
        android:animateLayoutChanges="true"
        >
        <TableRow >
            <!-- Park Here btn -->
            <Button
                android:paddingTop="20dp"
                android:id="@+id/menuBtn_ParkHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/color_pureWhite"

                android:drawableTop="@drawable/ic_icon_park"
                android:drawablePadding="10dp"
                android:text="@string/menu_txt_parkAlarm"

                android:textAllCaps="false"
                android:textSize="15sp"
                />

            <!-- CreateTip btn -->
            <Button
                android:paddingTop="15dp"
                android:id="@+id/menuBtn_CreateTip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/color_pureWhite"
                android:drawableTop="@drawable/ic_icon_pin"
                android:text="@string/menu_txt_createTip"
                android:textAllCaps="false"
                android:drawablePadding="15dp"
                android:textSize="15sp"
                />
            <!-- P Vagt btn -->
            <Button
                android:paddingTop="15dp"
                android:id="@+id/menuBtn_PVagt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/color_pureWhite"
                android:drawableTop="@drawable/ic_icon_person"
                android:text="@string/menu_txt_pVagt"
                android:textAllCaps="false"
                android:drawablePadding="15dp"
                android:textSize="15sp"
                />
        </TableRow>
        <TableRow
            android:id="@+id/menu_row_2"
            android:layout_marginBottom="10dp">
            <!-- FeedBack btn -->
            <Button
                android:paddingTop="15dp"
                android:id="@+id/menuBtn_FeedBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/color_pureWhite"
                android:drawableTop="@drawable/ic_icon_chat"
                android:text="@string/menu_txt_feedback"
                android:textAllCaps="false"
                android:drawablePadding="15dp"
                android:textSize="15sp"
                />
            <!-- Free Park btn -->
            <Button
                android:id="@+id/menuBtn_FreePark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/color_pureWhite"
                android:drawableTop="@drawable/ic_icon_freepark"
                android:drawablePadding="4dp"
                android:paddingTop="10dp"
                android:text="@string/menu_txt_freePark"
                android:textAllCaps="false"
                android:textSize="15sp" />
            <!-- profile btn -->
            <Button
                android:paddingTop="15dp"
                android:id="@+id/menuBtn_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/color_pureWhite"
                android:drawableTop="@drawable/ic_icon_lines"
                android:text="@string/menu_txt_profile"
                android:textAllCaps="false"
                android:drawablePadding="15dp"
                android:textSize="15sp"
                />
        </TableRow>
    </TableLayout>

</LinearLayout>